fix misaligned banner text on small screens

--- a/source/sass/mozfest.scss
+++ b/source/sass/mozfest.scss
@@ -78,8 +78,12 @@ body.mozfest {
         }
       }
 
-      .homepage-banner-content {
+      .homepage-banner-content.container {
         z-index: $banner-background-z-index + 3;
+
+        @media screen and (max-width: $bp-sm) {
+          width: 100%;
+        }
 
         @media screen and (min-width: $bp-md) {
           padding-bottom: $cutoff-offset;
